crates/compiler/tests/parse_errors/case_arrow.elm
module Main exposing (..)

x =
    case y of
        1 2
